requirements: Add tornado as a requirement.
It is only required when someone explicitly includes the
hypermedia[tornado] dependency.

--- a/tox.ini
+++ b/tox.ini
@@ -4,12 +4,9 @@ toxworkdir = {toxinidir}/build/tox
 
 [testenv]
 deps = -rtest-requirements.txt
-commands = {envbindir}/nosetests
-
-[testenv:py26]
-deps =
-    {[testenv:py27]deps}
-    unittest2
+commands =
+	{envbindir}/pip install 'hypermedia[tornado]'
+	{envbindir}/nosetests
 
 [testenv:py27]
 deps =
