--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 - pypy
 install:
 - pip install -r requirements.txt -r test-requirements.txt
-- pip install 'hypermedia[tornado]'
+- pip install 'tornado>=4,<5'
 script:
 - nosetests
 deploy:
