--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,20 @@
 [tox]
-envlist = py27,py33,py34
+envlist = py27,py33,py34,tornado3
 toxworkdir = {toxinidir}/build/tox
 
 [testenv]
-deps = -rtest-requirements.txt
-commands =
-	{envbindir}/pip install 'hypermedia[tornado]'
-	{envbindir}/nosetests
+deps =
+	-rtest-requirements.txt
+	tornado>=4,<5
+commands = {envbindir}/nosetests
 
 [testenv:py27]
 deps =
-    {[testenv]deps}
+	-rtest-requirements.txt
     mock
+
+[testenv:tornado3]
+basepython = python3
+deps =
+	-rtest-requirements.txt
+	tornado>=3,<4
