--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ nocapture = 1
 verbosity = 2
 stop = 1
 with-coverage = 1
-cover-package = hypermedia,tests
+cover-package = flask_hypermedia,hypermedia,tests
 cover-erase = 1
 cover-branches = 1
 
