Extend Tornado support to 3.x and fix testing.

--- a/tox.ini
+++ b/tox.ini
@@ -5,16 +5,17 @@ toxworkdir = {toxinidir}/build/tox
 [testenv]
 deps =
 	-rtest-requirements.txt
-	tornado>=4,<5
+    -f{distdir}
+    hypermedia[flask,tornado]
 commands = {envbindir}/nosetests
 
 [testenv:py27]
 deps =
-	-rtest-requirements.txt
+	{[testenv]deps}
     mock
 
 [testenv:tornado3]
 basepython = python3
 deps =
-	-rtest-requirements.txt
 	tornado>=3,<4
+    {[testenv]deps}
