--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
 install:
 - pip install -r requirements.txt -r test-requirements.txt
 - pip install 'tornado>=4,<5'
+- pip install 'flask'
 script:
 - nosetests
 deploy:
